examples/frontend.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: prj-example-1
  annotations:
    cardano.demeter.run/network: preview
