examples/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prj-example-1-frontend-service
  namespace: prj-example-1
spec:
  selector:
    demeter.run/instance: "foo"
    demeter.run/kind: "Frontend"
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
