examples/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prj-example-1-frontend-route
  namespace: prj-example-1
  annotations:
    konghq.com/strip-path: 'true'
spec:
  parentRefs:
  - name: kong
  hostnames:
  - bar.dmtr.host
  rules:
  - backendRefs:
    - name: prj-example-1-frontend-service
      kind: Service
      port: 80
