examples/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prj-example-1-frontend
  namespace: prj-example-1
  annotations:
    konghq.com/strip-path: "true"
spec:
  ingressClassName: kong
  rules:
  - host: foo.dmtr.host
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prj-example-1-frontend-service
            port:
              number: 80
